# spruceSource

./: .gitignore  delete_mac_files.bat
Graphics/: Promptsxcf.xcf  SpruceProKeys.xcf  SpruceRADefaults.xcf  spruceDownloadbar.xcf
IconRecolor/: .project
OTA/: releases.xml  spruce
battery-percentage/: Makefile  battery_percent-deprecated.c  battery_percent.c  battery_percent.elf
brick-dinguxCommander/: Makefile
curl/: Dockerfile  README.md  build-and-run.sh  build-curl.sh  compile_static_curl.sh
dinguxCommander/: Makefile
display_text/: Makefile  display_text.c  display_text.elf
easyConfig/: global.cpp  global.h  image_texture.cpp  main.cpp  setting_group.h  setting_item.cpp  setting_item.h  text_texture.cpp  text_texture.h  texture_base.cpp
easyConfig-64/: Makefile  global.cpp  global.h  image_texture.h  main.cpp  sdl_unique_ptr.h  setting_item.cpp  setting_item.h  texture_base.cpp
fbscreenshot/: Cargo.toml
fbscreenshot/.cargo/: config.toml
fbscreenshot/src/: main.rs
flip-dinguxCommander/: Makefile  README.md
flip-pythonsdl-testing/: README.txt  run.sh  test.py
gameswitcher/: .gitignore  Makefile  README.md  global.h  image_item.cpp  main.cpp  text_texture.cpp
gameswitcher-64/: Makefile  README.md  SDL_rotozoom.c  fbfixcolor.c  global.cpp  global.h  image_item.cpp  image_item.h  main.cpp  text_texture.cpp  text_texture.h
idlemon/: Dockerfile  idlemon.c  readme.txt
inotify/: Makefile  inotify.c
input_helpers/: Makefile  (+8 more)
thermal-watchdog/: Cargo.toml  Dockerfile  Makefile
thermal-watchdog/src/: config.rs  main.rs  thermalzone.rs
(+124 files in other folders)
