[package]
name = "fbscreenshot"
version = "1.0.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
image = { version = "0.25", default-features = false, features = ["png"] }
nix = { version = "0.30.1", features = ["ioctl"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true
