[package]
name = "thermal-watchdog"
description = "Configurable fan control for TrimUI Smart Pro S"
version = "1.0.0"
edition = "2024"

[dependencies]
inotify = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
strip = true
